--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>Welcome to Rock Paper Scissors game!</h1>
+    <p>To start playing open the console with ctrl + j (linux/windows) or cmd + j (mac)</p>
+    <p>write game() and let the fun begin!</p>
 </body>
 </html>
